--- a/TODO
+++ b/TODO
@@ -1,11 +1,18 @@
 DONE rewrite introduction [robby]
-DONE move comments on specific papers from intro into related work (and
-perhaps shrink them up a bit). [robby]
-- make edits suggested by "small comments" sections of OOPSLA reviews  [jay?]
-- add a new section between the current 2 and 3 that discusses
+
+DONE move comments on specific papers from intro into related work
+(and perhaps shrink them up a bit). [robby]
+
+TODO make edits suggested by "small comments" sections of OOPSLA reviews  [jay?]
+
+TODO add a new section between the current 2 and 3 that discusses
 fairness and the euler/boxy pairing function (edit 2 to match that new
 one) [max]
-- re-run the benchmarks [burke]
-- maybe discuss other applications (games)
-- add to the related work with that Scala enumeration paper.
-- look into whether to change emphasis to enum vs redex benchmark [robby]
+
+TODO re-run the benchmarks [burke]
+
+TODO maybe discuss other applications (games)
+
+TODO add to the related work with that Scala enumeration paper.
+
+TODO look into whether to change emphasis to enum vs redex benchmark [robby]
