--- a/model/TODO.org
+++ b/model/TODO.org
@@ -1,4 +1,4 @@
 * Model TODO
-  1. Split into multiple files
-  2. Assume axiom K and get rid of `type`
-  3. Fix run-coq-redex-tests.rkt (need Robby's help here)
+  1. [ ] Split into multiple files
+  2. [ ] Assume axiom K and get rid of `type`
+  3. [X] Fix run-coq-redex-tests.rkt (need Robby's help here)
